--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nomiclabs/hardhat-ethers": "^2.0.1",
     "@nomiclabs/hardhat-etherscan": "^2.1.1",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
+    "@openzeppelin/hardhat-upgrades": "^1.6.0",
     "chai": "^4.2.0",
     "ethereum-waffle": "^3.3.0",
     "ethers": "^5.0.26",
@@ -22,6 +23,7 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^3.4.0",
+    "@openzeppelin/contracts-upgradeable": "^3.4.1",
     "axios": "^0.21.1",
     "dotenv": "^8.2.0"
   }
